<resources>
    <string name="app_name">Электросчетчик</string>

    <string name="action_settings">Settings</string>
    <string name="resultCountNumber">000000</string>
    <string name="countedLabelText">На счетчике:</string>
    <string name="countedNumberMain">000000</string>
    <string name="whatCostLabelText">На сумму:</string>
    <string name="costMainText">000 \u20bd</string>
    <string name="title_activity_statistic">statistic</string>
    <string name="message_text">Text of your message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="edit_text">Редактировать</string>
    <string name="save_text">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="count_ok_text">ОК</string>
    <string name="count_cancel_text">Отмена</string>
    <string name="new_count_title">Новое измерение</string>
    <string name="first_count_title">Первое измерение</string>
    <string name="menu_delete_all_text">Удалить все измерения</string>
    <string name="menu_about_text">О приложении</string>
    <string name="menu_changetariff_text">Изменить тариф</string>
    <string name="edit_tariff_text">Смена тарифа</string>
    <string name="main_difference_text">натикало:</string>
    <string name="menu_stopnoti">Выключить уведомления</string>
    <string name="menu_startnoti">Включить уведомления</string>

</resources>
