<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_delete"
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/menu_delete_all_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_changeprice"
        android:orderInCategory="100"
        android:title="@string/menu_changetariff_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stopnoti"
        android:orderInCategory="100"
        android:title="@string/menu_stopnoti"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_startnoti"
        android:orderInCategory="100"
        android:title="@string/menu_startnoti"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/menu_about_text"
        app:showAsAction="never" />
</menu>
